# OpenCV

./: CMakeLists.txt  README.md  opencv4.cpp  opencv4_open_Color_Detection.cpp  opencv4_open_Drawing_Shape_Text.cpp  opencv4_open_Function.cpp  opencv4_open_Image_Video.cpp  opencv4_open_Resize_Crop.cpp  opencv4_open_Shapes_Contour_Detection.cpp  opencv4_open_Warp_Perspective.cpp  opencv4_open_WebCamera.cpp
ComputerVisionWithOpenCV3_Qt5_Code/Hello_Qt_OpenCV/: CMakeLists.txt
ComputerVisionWithOpenCV3_Qt5_Code/Hello_Qt_OpenCV2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Control/: CropBoundingBox.cpp  dataPath.h  using_the_keyboard_as_input_device.cpp
Images/: CMakeLists.txt  Load_Images.cpp  Using_Naive_Replace.cpp
Images/Application_Sunglasses_Filter/: Using_Arithmetic_Operations.cpp  dataPath.h
Images/Basic_Image_Operations/: CMakeLists.txt  Color_Images.cpp  Creating_an_image_mask.cpp  Image_as_a_matrix.cpp  Resizing_an_image.cpp  Splitting_and_merging_channels.cpp
Images/Image_Annotation/: Drawing_Lines.cpp  dataPath.h
Images_Video/Basic_Image_Operations/: Copying_a_region_to_another.cpp  Create_new_images.cpp  Creating_an_image_mask.cpp  Manipulating_Color_Pixels.cpp
Images_Video/Image_Annotation/: Drawing_Ellipse.cpp  Drawing_Text.cpp
ImplementationOfMorphologicalOperations/: blobDetection.cpp
LearnOpenCV_com/: CMakeLists.txt  Finding_and_Drawing_Contours.cpp  Frame_differencing_when_use_Median_for_Background_Estimation.cpp  Median_for_Background_Estimation.cpp  opencv4_open_Color_Detection.cpp  opencv4_open_Drawing_Shape_Text.cpp  opencv4_open_Face_Detection.cpp  opencv4_open_Shapes_Contour_Detection.cpp  opencv4_open_Warp_Perspective.cpp  opencv4_open_WebCamera.cpp
LearnOpenCV_course/: CMakeLists.txt
LearnOpenCV_course/Color/: CMakeLists.txt
LearnOpenCV_course/Color/ColorSpace/: ColorSpaceLAB.cpp  dataPath.h  desaturationFilter.cpp  dominantColor.cpp
LearnOpenCV_course/Color/ColorTransformations/: ColorTransformationsCooling.cpp  ColorTransformationsWarming.cpp  Contrast_Limited_Adaptive_Histogram_Equalization_CLAHE.cpp
LearnOpenCV_course/Color/ImageFiltering/: convolution.cpp
LearnOpenCV_course/Color/ImageSmoothing/: bilateralBlur.cpp  boxBlur.cpp  gaussianBlur.cpp  medianBlur.cpp
LearnOpenCV_course/ColorSpaces/: CMakeLists.txt  ColorSpaceBGR.cpp  ColorSpaceHSV.cpp  ColorSpaceYCrCb.cpp  ColorTransformationsWarming.cpp  histogramEqualizationColor.cpp  histogramEqualizationGrayscale.cpp
LearnOpenCV_course/Control/: adding_a_trackbar_as_controller.cpp  using_the_mouse_for_annotation.cpp
LearnOpenCV_course/Filters_and_convolution/: CMakeLists.txt
LearnOpenCV_course/Filters_and_convolution/ImageGradients/: DetectorCanny.cpp  Laplacian.cpp  OperatorSobel.cpp  imageSharpening.cpp
LearnOpenCV_course/Image_Analysis/: CoinDetection.cpp  Face_Blending.cpp  Hough_Transform_Search_Circles_Lines.cpp  Image_In_Painting.cpp  Seamless_Cloning.cpp  hdr.cpp
LearnOpenCV_course/Images_Video/: CMakeLists.txt
LearnOpenCV_course/Images_Video/Basic_Image_Operations/: Cropping_an_Image_Section.cpp  Image_with_alpha_channel.cpp  Manipulating_Pixels.cpp  Manipulating_group_of_pixels.cpp
LearnOpenCV_course/Images_Video/Image_Annotation/: Drawing_Circles.cpp  Drawing_Lines.cpp  Drawing_Rectangles.cpp
LearnOpenCV_course/Images_Video/Video/: VideoRead.cpp  VideoWrite.cpp
LearnOpenCV_course/ImplementationOfMorphologicalOperations/: connectedComponentAnalysis.cpp  contours.cpp  dataPath.h  erosionDilation.cpp  openingClosing.cpp  thresholding.cpp
LearnOpenCV_course/Keypoints_and_Descriptors/: Application_Find_Object_using_Image_Features.cpp  Application_Image_Alignment_Document_Scanner.cpp  Application_Panorama.cpp  Application_Perspective_Correction.cpp  Application_Virtual_Billboard.cpp  Feature_Matching.cpp  Geometric_Transform.cpp  Homography_Example.cpp  Image_Features_ORB.cpp
LearnOpenCV_course/MotionDetector/: CMakeLists.txt
LearnOpenCV_course/MotionDetector/src/: main.cpp
LearnOpenCV_course/Object_Detect/: detectFaceDemo.cpp  detectFaceSmileDemo.cpp  detectPedestrians.cpp  grabcut.cpp
LearnOpenCV_course/Tracking/: Lucas_Kanade_tracker.cpp  Tracking2.cpp  camShift.cpp  dataPath.h  kalmanTracker.cpp  meanShift.cpp
